@@ -220,11 +220,13 @@ setMethod(
         # if(!is.null(outlist$percentageShared)) {
         #   coClustering(newObj) <- Matrix::Matrix(outlist$percentageShared,sparse=TRUE)
         # }
-        coClustering(newObj) <- whichClusters
         ##Check if pipeline already ran previously and if so increase
-        x<-.updateCurrentWorkflow(x,eraseOld,newTypeToAdd="makeConsensus",newLabelToAdd=clusterLabel)
-        
-        if(!is.null(x)) retval<-.addNewResult(newObj=newObj,oldObj=x) #make decisions about what to keep.
+        x<-.updateCurrentWorkflow(x,eraseOld,
+            newTypeToAdd="makeConsensus",newLabelToAdd=clusterLabel)
+        if(!is.null(x)){
+            coClustering(x) <- whichClusters
+            retval<-.addNewResult(newObj=newObj,oldObj=x) #make decisions about what to keep.
+        }
         else retval<-.addBackSEInfo(newObj=newObj,oldObj=x)
         return(retval)
     }
